# rugcheck-cli

./: .gitignore  README.md  pyproject.toml
src/rugcheck_cli/: chains.py  cli.py  runner.py  scoring.py
src/rugcheck_cli/clients/: __init__.py  _base.py  dexscreener.py  goplus.py  rugcheck.py
src/rugcheck_cli/web/: app.py  server.py
src/rugcheck_cli/web/static/: index.html
tests/: test_chains.py  test_scoring.py
