[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rugcheck-cli"
version = "0.1.0"
description = "One-shot token risk scanner: wraps rugcheck.xyz, GoPlus, and DexScreener into a single CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "colto" }]
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]

[project.scripts]
rugcheck = "rugcheck_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rugcheck_cli"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
